# requests

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md
cmake/: BuildTest.cmake  FetchGit.cmake  ThisProject.cmake
include/requests/: error.hpp  method.hpp  request.hpp  requests.hpp  response.hpp
src/: CMakeLists.txt  error.cpp  request.cpp  requests.cpp  response.cpp
tests/: CMakeLists.txt  get.cpp
